--- a/UnderConstruction.html
+++ b/UnderConstruction.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>John Curran - Albums</title>
+<title>John Curran - Blog</title>
 <link type="text/css" rel="stylesheet" href="reset.css">
 <link type="text/css" rel="stylesheet" href="main.css">
 <link type="text/css" rel="stylesheet" href="menu.css">
-<link type="text/css" rel="stylesheet" href="navbox.css">
 <link rel="shortcut icon" href="smallIcon.ico">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="menu.js"></script>
@@ -14,12 +13,11 @@
 //Would be nice to develop a function that recursively sets menu buttons to current.
 $(window).load(function(){
 	$('.menubutton').each(function(){
-		if($(this).html().indexOf("Pictures") > -1){
+		if($(this).html().indexOf("Blog") > -1){
 			$(this).attr("id", "current");
 			$(this).parent().removeAttr("href");
 		}
 	});
-
 });
 </script>
 </head>
